new updated methods for artists and songs
